# tcd1254-fpga

./: .gitignore  Makefile  README.md
constraints/: colorlight_i9.lpf
firmware/: CMakeLists.txt
firmware/include/: config.h  fpga_spi.h  pins.h  sort_sequence.h  stepper.h  tmc2209.h
firmware/pio/: stepper.pio
firmware/src/: config.c  fpga_spi.c  main.c  sort_sequence.c  stepper.c  tmc2209.c
host/: capture.py  pyproject.toml
host/ccd_inspector/: app.py
host/ccd_inspector/comm/: ccd_link.py  protocol.py  rp2040_link.py  serial_link.py
host/ccd_inspector/core/: calibration.py  config.py  frame.py  timing.py
host/ccd_inspector/flash/: coordinator.py  lamp_config.py  sequence.py
host/ccd_inspector/gui/: main_window.py
host/ccd_inspector/gui/tabs/: calibration_tab.py  edge_detection_tab.py  exposure_tab.py  flash_sequence_tab.py  live_view_tab.py  system_control_tab.py
host/ccd_inspector/gui/widgets/: histogram_widget.py  waveform_widget.py
host/ccd_inspector/processing/: edge_detect.py  filters.py  multi_angle.py  part_classifier.py
src/: adc_capture.v  adc_clk_gen.v  ccd_driver.v  cmd_parser.v  flash_trigger.v  frame_buffer.v  frame_tx.v  pll.v  shadow_detect.v  spi_peripheral.v  top.v  uart_rx.v  uart_tx.v
src/_legacy/: step_generator.v
testbench/: pll_sim.v  tb_ccd_driver.v  tb_flash_trigger.v  tb_shadow_detect.v  tb_spi_peripheral.v  tb_top.v
